--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,11 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath('org.unbroken-dome.gradle-plugins:gradle-testsets-plugin:1.4.3')
     }
 }
 
@@ -14,6 +16,7 @@ apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'war'
+apply plugin: 'org.unbroken-dome.test-sets'
 
 group = 'ee.maksimov.demo.spring.jpa'
 version = '0.0.1-SNAPSHOT'
@@ -27,6 +30,13 @@ repositories {
 configurations {
     providedRuntime
 }
+
+testSets {
+    integrationTest
+}
+
+check.dependsOn integrationTest
+integrationTest.mustRunAfter test
 
 dependencies {
     compileOnly('org.projectlombok:lombok')
@@ -44,6 +54,7 @@ dependencies {
 
     providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 
+    testCompile('org.testcontainers:postgresql:1.6.0')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
 }
