Added the simplest possible REST controller.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5500/springjpa
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
 spring.datasource.driver-class-name=org.postgresql.Driver
+# removes java.sql.SQLFeatureNotSupportedException: Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog.xml
+# random port
+server.port=0
